# bob-agent

./: .gitignore  .mcp.json  CLAUDE.md  COWORK.md  Dockerfile  README.md  ai_news_whatsapp.py  bob_memory_baseline.json  docker-compose.yml  pyproject.toml  send_crypto_brief.py
docs/: AGENTS.md  API.md  DEPLOYMENT.md  (+5 more)
mind-clone/: .coveragerc  .env.example  .gitignore  BOB_LEARNING_GUIDE.md  BOB_RESEARCH.md  CHANGELOG.md  CHAT_SETUP_README.txt  CLAUDE.md  README.md  ai_tools_analysis.md  ai_tools_scoring.py  bobchat.py  bobchat_interface.py  chat_history.json  chat_requirements.txt  competitive_intelligence_matrix.py  demo_chart.py  e2e_test.py  fib_output.txt  gauntlet_research.md  migrate_db.py  mind_clone_agent.py  perfect_numbers.py  private_chat_app.py  pyproject.toml  requirements.txt
mind-clone/docs/superpowers/specs/: 2026-03-30-bob-power-batch1-design.md
mind-clone/scripts/: apply_startup_fixes.py  bob_agent_loop.py  bob_api.py  bob_bench.py  bob_check.py  bob_cron.py  bob_daemon.ps1  bob_db.py  bob_dev_mcp.py  bob_diag.py  bob_find.py  bob_health.py  bob_identity.py  bob_llm.py  bob_log.py  bob_memory.py  bob_migrate.py  bob_migrate_embeddings.py  bob_newtool.py  bob_queue.py  bob_security.py  bob_sync.py  bob_tasks.py  bob_team_mcp.py  bob_telegram.py  bob_test_live.py  bob_tools.py  check_approvals.py  check_messages.py  check_status.py  diag.py  fix_approvals.py  hardening_s1_checks.py  mutation_test.py  release_gate_check.py
mind-clone/src/mind_clone/: __init__.py  __main__.py  config.py  doctor_cli.py  gateway.py  runner.py
mind-clone/src/mind_clone/adapters/: __init__.py  base.py  cron_adapter.py  telegram_adapter.py
mind-clone/src/mind_clone/agent/: __init__.py  episodes.py  goals.py  identity.py  learning.py  llm.py  loop.py  memory.py  reasoning.py  recall.py  vectors.py  world_model.py
mind-clone/src/mind_clone/agents/: __init__.py  coder.py  config.py  llm_client.py  orchestrator.py  planner.py  reviewer.py  tester.py  workspace.py
mind-clone/src/mind_clone/api/: factory.py  routes.py
mind-clone/src/mind_clone/api/routes/: __init__.py  _shared.py  agent_team.py  browser.py  debug.py  health.py  ide.py  mcp.py  nodes.py  ops.py  stream.py  telegram.py  ui.py  workflow.py
mind-clone/src/mind_clone/core/: __init__.py  agent.py  approvals.py  authorization.py  blackbox.py  budget.py  circuit.py  closed_loop.py  config_migration.py  context_engine.py  custom_tools.py  debug_flags.py  evaluation.py  goals.py  host_exec.py  knowledge.py  message.py  model_router.py  nodes.py  parallel.py  plugins.py  policies.py  protocols.py  queue.py  sandbox.py  secrets.py  security.py  self_tune.py  session.py  sessions.py  startup.py  state.py  subagents.py  tasks.py  tools.py  workspace_diff.py
mind-clone/src/mind_clone/core/blackbox/: __init__.py  assertions.py  recorder.py  reporting.py
mind-clone/src/mind_clone/core/custom_tools/: __init__.py  creator.py  executor.py  validator.py
mind-clone/src/mind_clone/core/evaluation/: __init__.py  cases.py  reporting.py  runner.py  scoring.py
mind-clone/src/mind_clone/database/: MIGRATION_NOTES.md  models.py  session.py
mind-clone/src/mind_clone/orchestrators/: multi_model.py
mind-clone/src/mind_clone/services/: __init__.py  agent_spawner.py  auto_merge.py  auto_research.py  autonomous_research.py  autonomy.py  bob_teaches_bob.py  browser_agent.py  browser_automation.py  calendar_email.py  channel_state.py  checkpoint.py  co_critic.py  code_sandbox.py  config_tuner.py  constitutional.py  context_compressor.py  context_engine.py  continuous_learner.py  correction_learner.py  deep_research.py  discord_adapter.py  doctor.py  ebbinghaus.py  embedding_dedup.py  event_triggers.py  github_research.py  health_watchdog.py  jit_rl.py  knowledge_base.py  mcp_client.py  memory_consolidator.py  memory_export.py  memory_graph.py  memory_reindex.py  meta_tools.py  model_router.py  observability.py  onboarding.py  planner.py  (+33 more)
mind-clone/src/mind_clone/services/memory/: __init__.py  chroma_store.py  consolidator.py  ebbinghaus.py  export.py  graph.py  reindex.py
mind-clone/src/mind_clone/services/telegram/: __init__.py  _imports.py  bot.py  commands.py  dispatch.py  events.py  messaging.py  runtime.py  supervisors.py  utils.py
mind-clone/src/mind_clone/tools/: __init__.py  agent_team.py  basic.py  browser.py  codebase.py  custom.py  desktop.py  github.py  knowledge.py  memory.py  nodes.py  registry.py  scheduler.py  schemas.py  sessions.py  skill_library.py  subagents.py  vision.py  web_automation.py
mind-clone/src/mind_clone/tools/desktop/: __init__.py  _shared.py  actions.py  screen.py  sessions.py
mind-clone/src/mind_clone/tools/registry/: __init__.py  custom.py  definitions.py  dispatch.py  wrappers.py
mind-clone/src/mind_clone/utils/: __init__.py  json.py  text.py
mind-clone/tests/: __init__.py  conftest.py
mind-clone/tests/integration/: __init__.py  test_api.py  test_benchmark_baseline.py  test_conversation.py  test_cross_module.py  test_e2e.py  test_gateway_pipeline.py  test_security_integration.py  test_services.py  test_telegram_webhook.py
mind-clone/tests/unit/: test_agent_team_tool.py  test_agents.py  test_approvals.py  test_authorization.py  test_browser_tools.py  test_budget.py  test_circuit.py  test_closed_loop.py  test_closed_loop_extended.py  test_config.py  test_context_engine.py  test_core_tasks.py  test_core_tools.py  test_database.py  test_evaluation.py  test_evaluation.py.bak  test_factory.py  test_goals.py  test_identity.py  test_json_utils.py  test_knowledge.py  test_llm.py  test_loop.py  test_memory.py  test_model_router.py  test_onboarding.py  test_plugins.py  test_policies.py  test_queue.py  test_registry.py  test_sandbox.py  test_scheduler.py  test_schemas.py  test_secrets.py  test_security.py  test_self_tune.py  test_session_db.py  test_skills.py  test_state.py  test_subagents.py  (+6 more)
mind-clone/webchat/: DEPLOY.md  README.md  START_CHAT.bat  app.py  deploy-render.py  index.py  render.yaml  simple_app.py  start_chat.sh
mind-clone/webchat/templates/: chat.html  simple_chat.html
(+86 files in other folders)
